--- a/slides/index.html
+++ b/slides/index.html
@@ -193,12 +193,20 @@
         </section>
 
         <section>
-          <h2>What's happening here?</h2>
-          <p class="fragment">These are all caused by a mistaken mental model</p>
+          <h1 class="fragment" style="margin-top: -1em;">Gotchas</h1>
+          <ol style="font-size: 0.7em; list-style: none; counter-reset: item; padding-left: 0;">
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;"><strong style="font-size: 1.5em; margin-right: 0.5em; line-height: 1;">1.</strong> <code>second = first</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;"><strong style="font-size: 1.5em; margin-right: 0.5em; line-height: 1;">2.</strong> <code style="white-space: pre;">for i, n in enumerate(numbers):
+    numbers[i] = n ** 2</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;"><strong style="font-size: 1.5em; margin-right: 0.5em; line-height: 1;">3.</strong> <code>groups = dict.fromkeys(colors, [])</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;"><strong style="font-size: 1.5em; margin-right: 0.5em; line-height: 1;">4.</strong> <code>matrix = [[0] * 3] * 3</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;"><strong style="font-size: 1.5em; margin-right: 0.5em; line-height: 1;">5.</strong> <code style="white-space: pre;">def __init__(self, tasks=[]):
+    self.tasks = tasks</code></li>
+          </ol>
           <aside class="notes" data-markdown>
-            - If you found yourself surprised by any of those bits of code
-            - Your mental model of Python's variables and objects may be at least *slightly* different from how Python actually works
-            - I'd like to share the mental model I recommend using when thinking about Python's variables and objects
+            - My goal in this talk is to clarify
+            - Why these 5 bits of code **(CLICK)** are "gotchas"
+            - We'll do this, by considering the **mental models** that we use for variables and objects in Python
           </aside>
         </section>
 
@@ -520,6 +528,22 @@
           </aside>
         </section>
 
+        <section>
+          <h1>Gotchas</h1>
+          <ol style="font-size: 0.7em; list-style: none; counter-reset: item; padding-left: 0;">
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;" class="fragment highlight-red"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">1.</strong> <code>second = first</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">2.</strong> <code style="white-space: pre;">for i, n in enumerate(numbers):
+    numbers[i] = n ** 2</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">3.</strong> <code>groups = dict.fromkeys(colors, [])</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">4.</strong> <code>matrix = [[0] * 3] * 3</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">5.</strong> <code style="white-space: pre;">def __init__(self, tasks=[]):
+    self.tasks = tasks</code></li>
+          </ol>
+          <aside class="notes" data-markdown>
+            - And that explains **(CLICK)** our first gotcha
+          </aside>
+        </section>
+
       </section>
       <section>
         <!-- section: identity -->
@@ -824,6 +848,22 @@ def square_all(numbers):
         </section>
         -->
 
+        <section>
+          <h1>Gotchas</h1>
+          <ol style="font-size: 0.7em; list-style: none; counter-reset: item; padding-left: 0;">
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline; color: red;"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">1.</strong> <code>second = first</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;" class="fragment highlight-red"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">2.</strong> <code style="white-space: pre;">for i, n in enumerate(numbers):
+    numbers[i] = n ** 2</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">3.</strong> <code>groups = dict.fromkeys(colors, [])</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">4.</strong> <code>matrix = [[0] * 3] * 3</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">5.</strong> <code style="white-space: pre;">def __init__(self, tasks=[]):
+    self.tasks = tasks</code></li>
+          </ol>
+          <aside class="notes" data-markdown>
+            - That's **(CLICK)** two down, three to go
+          </aside>
+        </section>
+
       </section>
       <section>
         <!-- section: containment -->
@@ -847,6 +887,7 @@ def square_all(numbers):
             - ...
             - depending on what we mean **(CLICK)** by data
             - What I really mean is that **(CLICK)** data structures don't contain *objects*
+            - Earlier, I showed a diagram that looked like...
           </aside>
         </section>
 
@@ -855,7 +896,7 @@ def square_all(numbers):
           <div style="display: grid; grid-auto-flow: column;">
             <pre class="python"><code data-trim data-noescape>
 >>> first = []
->>> second = first
+>>> <span class="fragment bold-current" data-fragment-index=0>second = first</span>
 >>> second.append(9)
 >>> second
 [9]
@@ -914,12 +955,13 @@ def square_all(numbers):
             </div>
           </div>
           <aside class="notes" data-markdown>
-            - Earlier, I showed a diagram that looked like this
+            - this.
+            - Because we **(CLICK)** assigned two variables to the same value
             - Both `first` and `second` point to the same list, and that list contains the number `9`
             - But that list doesn't *actually* contain the number 9
             - This diagram should technically look more like this... **(CLICK)**
-            - The list doesn't *contain* the number `9`
-            - The list contains a *reference* to the number `9`
+            - Because the list doesn't *contain* the number `9`...
+            - It only contains a *reference* to the number `9`
           </aside>
         </section>
 
@@ -981,7 +1023,7 @@ def square_all(numbers):
                   <rect x="262.5" y="85" width="25" height="20" fill="none" stroke="#000"/>
                   <text x="274" y="98.5" fill="#00f" font-size="13px" text-anchor="middle">0</text>
                 </g>
-                <g class="fragment" data-fragment-index=1>
+                <g class="fragment" data-fragment-index=2>
                   <rect x="20" y="179" width="120" height="50" fill="#e1d5e7" stroke="#9673a6"/>
                   <text x="79" y="207" fill="#000" font-size="13px" text-anchor="middle">rows</text>
                   <path d="M 140 205 L 213.63 205" fill="none" stroke="#000" stroke-miterlimit="10"/>
@@ -1004,32 +1046,38 @@ def square_all(numbers):
             - And objects can only *point* to other objects
             - Objects *cannot contain* other objects
             - Which is why... **(CLICK)** if we put our list inside another list...
-            - The new list doesn't *contain* our list
+            - The new list won't *contain* our list **(CLICK)**
             - The new list's first index just points to the original list object
-            - A list-of-lists is a list that contain *references* to lists
+            - Which means... phrases like...
           </aside>
         </section>
 
         <section>
-          TODO
+          <h2>&ldquo;a list of lists&rdquo;</h2>
+          <h2 class="fragment">&ldquo;a list of references to lists&rdquo;</h2>
           <aside class="notes" data-markdown>
-            - We sometimes use the words "containment" and "contains" in Python
-            - These words are convenient, but they can also create a false mental model
-            - Data structures in Python don't actually *contain* objects
-            - Data structures only contain *pointers* to objects
-            - Let's take a look at what's going on here by revisiting our earlier puzzles...
+            - A list-of-lists are actually short-hand
+            - ... for **(CLICK)** "a list that contain *references* to lists"
+            - And the word...
           </aside>
         </section>
 
         <section>
-          <h1 class="fragment">Containment</h1>
+          <h1>Containment</h1>
           <h2 class="fragment">... is a lie</h2>
+          <pre class="python fragment" style="width: 15%; text-align: center;"><code data-trim data-noescape style="font-size: 30px; line-height: 36px;">
+x in y
+          </code></pre>
+          <h3 class="fragment">&ldquo;y contains x&rdquo;</h3>
           <aside class="notes" data-markdown>
-            - In Python, "containment" **(click)** is a slightly misleading term
+            - Containment is...
             - **(CLICK)**
-            - Data structures don't actually contain data
-            - Data structures contain references to data
-            - So let's revisit our earlier problems with this in mind...
+            - slightly misleading
+            - Because objects cannot contain other objects... they can only contain *references* to objects
+            - So when we ask whether one object contains another... **(CLICK)**
+            - We're asking whether one object contains a **reference** to an object that **is equal** to another object
+            - But, instead of saying all that, we just say "y contains x"
+            - TODO make the containment and "... is a lie" part disappear as we reveal "x contains x"
           </aside>
         </section>
 
@@ -1639,12 +1687,28 @@ def square_all(numbers):
           </aside>
         </section>
 
+        <section>
+          <h1>Gotchas</h1>
+          <ol style="font-size: 0.7em; list-style: none; counter-reset: item; padding-left: 0;">
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline; color: red;"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">1.</strong> <code>second = first</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline; color: red;"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">2.</strong> <code style="white-space: pre;">for i, n in enumerate(numbers):
+    numbers[i] = n ** 2</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;" class="fragment highlight-red" data-fragment-index=0><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">3.</strong> <code>groups = dict.fromkeys(colors, [])</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;" class="fragment highlight-red" data-fragment-index=0><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">4.</strong> <code>matrix = [[0] * 3] * 3</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;" class="fragment highlight-red" data-fragment-index=0><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">5.</strong> <code style="white-space: pre;">def __init__(self, tasks=[]):
+    self.tasks = tasks</code></li>
+          </ol>
+          <aside class="notes" data-markdown>
+            - And that's **(CLICK)** all five of our gotchas explained
+          </aside>
+        </section>
+
         <section data-transition="slide-in none-out">
           <pre class="python"><code data-trim data-noescape>
 >>> <span class="fragment" data-fragment-index=2>class TodoList:
 ...     def __init__(self, tasks):
 ...         self.tasks = tasks
-... 
+...
 ...     def add_task(self, task):
 ...         self.tasks.append(task)
 ...
@@ -1676,6 +1740,7 @@ def square_all(numbers):
           </aside>
         </section>
 
+        <!--
         <section data-transition="none-in none-out">
           <pre class="python"><code data-trim data-noescape>
 >>> <span>class TodoList:
@@ -1727,7 +1792,7 @@ def square_all(numbers):
             - **15 minutes**
           </aside>
         </section>
-
+        -->
 
       </section>
       <section>
@@ -1819,7 +1884,7 @@ True</span>
           <li class="fragment" data-fragment-index=7>Tuples containing mutable objects</li>
           <li class="fragment" data-fragment-index=7>Why it all works this way</li>
           </ul>
-          <h2 style="margin-top: 0.2em;" class="fragment" data-fragment-index=8><a href="https://trey.io/nbpy2025">https://trey.io/nbpy2025</a></h2>
+          <h2 style="margin-top: 0.2em;" class="fragment" data-fragment-index=8><a href="https://trey.io/pycascades26">https://trey.io/pycascades26</a></h2>
           <p style="font-size: 0.9em;" class="fragment" data-fragment-index=9><a href="https://pyvideo.org/pyohio-2011/pyohio-2011-names-objects-and-plummeting-from.html">Names, Objects, and Plummeting From The Cliff</a> - Brandon Rhodes</p>
           <p style="font-size: 0.9em;" class="fragment" data-fragment-index=9><a href="https://nedbatchelder.com/text/names1.html">Facts and Myths about Names and Values</a> - Ned Batchelder</p>
 
@@ -1874,7 +1939,7 @@ True</span>
 
       </section>
       <section style="text-align: left;" data-background="#663399" data-background-transition="slide" data-transition="slide">
-        <h2 style="margin-top: 0.5em;">Resources &nbsp; <a href="https://trey.io/nbpy2025">https://trey.io/nbpy2025</a></h2>
+        <h2 style="margin-top: 0.5em;">Resources &nbsp; <a href="https://trey.io/pycascades26">https://trey.io/pycascades26</a></h2>
         <h3 style="margin-top: 1.5em;">
           Thank you<br>
         </h3>
@@ -2169,7 +2234,7 @@ TypeError: 'tuple' object does not support item assignment
           { src: 'plugin/notes/notes.js', async: true },
           { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
           { src: 'plugin/title-footer/title-footer.js', async: true, callback: function() {
-            title_footer.initialize("trey.io/nbpy2025", "rgba(0,255,0,0.0)");
+            title_footer.initialize("trey.io/pycascades26", "rgba(0,255,0,0.0)");
           } }
         ]
       });
