--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     Hello!
     </p>
     <p>
-    This page includes the resources I drew from when piecing together my North Bay Python 2025 talk, <strong>Variables and objects: it's pointers all the way down</strong>.
+    This page includes the resources I drew from when piecing together my talk <strong>Variables and objects: it's pointers all the way down</strong>.
     This page also contains links to my slides and information about me.
     </p>
     <p>
@@ -46,6 +46,10 @@
     You can watch <a href="https://youtu.be/5XO7yPel9Lg">the recording</a> of this talk below.
     </p>
     <iframe width="100%" height="340" src="https://www.youtube.com/embed/5XO7yPel9Lg?si=eFD2K2XBiWOZB61s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <p>
+    Note that this recording is of the North Bay Python 2025 version of this talk, which is different from the PyCascades 2026 version.
+    </p>
 
     <hr>
 
