Fix transition for last gotchas slide

--- a/slides/index.html
+++ b/slides/index.html
@@ -1693,16 +1693,17 @@ x in y
             <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline; color: red;"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">1.</strong> <code>second = first</code></li>
             <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline; color: red;"><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">2.</strong> <code style="white-space: pre;">for i, n in enumerate(numbers):
     numbers[i] = n ** 2</code></li>
-            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;" class="fragment highlight-red" data-fragment-index=0><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">3.</strong> <code>groups = dict.fromkeys(colors, [])</code></li>
-            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;" class="fragment highlight-red" data-fragment-index=0><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">4.</strong> <code>matrix = [[0] * 3] * 3</code></li>
-            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;" class="fragment highlight-red" data-fragment-index=0><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">5.</strong> <code style="white-space: pre;">def __init__(self, tasks=[]):
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;" class="fragment highlight-red" data-fragment-index=2><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">3.</strong> <code>groups = dict.fromkeys(colors, [])</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;" class="fragment highlight-red" data-fragment-index=1><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">4.</strong> <code>matrix = [[0] * 3] * 3</code></li>
+            <li style="margin-bottom: 1.0em; counter-increment: item; display: flex; align-items: baseline;" class="fragment highlight-red" data-fragment-index=3><strong style="font-size: 1.5em; margin-right: 0.3em; line-height: 1;">5.</strong> <code style="white-space: pre;">def __init__(self, tasks=[]):
     self.tasks = tasks</code></li>
           </ol>
           <aside class="notes" data-markdown>
-            - And that's **(CLICK)** all five of our gotchas explained
+            - That explains our **(CLICK)** last **(CLICK)** three **(CLICK)** gotchas
           </aside>
         </section>
 
+        <!--
         <section data-transition="slide-in none-out">
           <pre class="python"><code data-trim data-noescape>
 >>> <span class="fragment" data-fragment-index=2>class TodoList:
@@ -1740,7 +1741,6 @@ x in y
           </aside>
         </section>
 
-        <!--
         <section data-transition="none-in none-out">
           <pre class="python"><code data-trim data-noescape>
 >>> <span>class TodoList:
