Improve transition and split example revisits into separate section

--- a/slides/index.html
+++ b/slides/index.html
@@ -219,7 +219,7 @@
 
         <section>
           <h2 class="fragment" data-fragment-index=1>Buckets</h2>
-          <div style="display: grid; grid-auto-flow: column;">
+          <div class="fragment" data-fragment-index=1 style="display: grid; grid-auto-flow: column;">
             <pre class="python"><code data-trim data-noescape style="font-size: 25px; line-height: 30px;">
 >>> <span class="fragment" data-fragment-index=2>first = []
 >>> </span><span class="fragment" data-fragment-index=4>second = first
@@ -1081,6 +1081,10 @@ x in y
             - But, instead of saying all that, **(CLICK)** we just say "y contains x"
           </aside>
         </section>
+
+      </section>
+      <section>
+        <!-- section: revisiting problems -->
 
         <section data-transition="slide-in none-out">
           <div style="display: grid; grid-template-columns: 50% 50%;">
